--- a/css/styles.css
+++ b/css/styles.css
@@ -156,9 +156,98 @@
 /*************************************************************************/
 
 .features {
+    display: flex;
     width: 100vw;
     /* height: 100vh; */
     background-color: rgba(40, 39, 44, 1);
     height: calc(100vh - 60px);
+
+}
+
+.featurescontainer {
+    width: 100vw;
+    height: 90vh;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.sword {
+    flex: 1;
+    justify-content: center;
+    background-image: url(/css/r1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.spc1 {
+    flex: .1;
+}
+
+.fcont {
+    padding: 10px;
+    display: flex;
+    flex: 1;
+    /* background-color: aquamarine; */
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.fchp {
+    width: 300px;
+    height: 300px;
+}
+
+
+.fchp h2 {
+    font-size: xx-large;
+    font-weight: bold;
+    color: white;
+    padding-bottom: 60px;
+}
+
+.fchp p {
+    color: darkgrey;
+    margin-top: 30px;
+    font-size: small;
+}
+
+/**********************************************************/
+
+.download {
+    /* background-color: cadetblue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 40vh;
+    /* padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px; */
+}
+
+/* .dccontainer {
+    display: flex;
+    padding-left: 20px;
+    padding-right: 20px;
+} */
+
+.windows {
+    height: 100vh;
+    flex: 1;
+    background-color: cadetblue;
+}
+
+.linux {
+    flex: 1;
+    background-color: cadetblue;
+
+
+}
+
+.mac {
+    flex: 1;
+    background-color: cadetblue;
 
 }
