--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@
     display: flex;
     width: 100vw;
     height: calc(100vh - 60px);
-    background-image: url(css/R.png);
+    background-image: url(/css/R.png);
     justify-content: center;
     align-items: center;
 }
@@ -174,7 +174,7 @@
 .sword {
     flex: 1;
     justify-content: center;
-    background-image: url(css/r1.png);
+    background-image: url(/css/r1.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
