--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
     width: 100vw;
     height: 60px;
     position: fixed;
+    z-index: 20;
     background-color: rgba(40, 39, 44, .5);
     backdrop-filter: blur(10px); 
     border-width: 1px;
